--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,33 @@
+.container {
+  position: relative;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  align-items: flex-start;
+  background: white;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  margin: auto;
+  width: calc(2vh * 30 + 2px);
 }
 
-.App-link {
-  color: #61dafb;
+.App .block {
+  /* border-radius: 3px; */
+  /* border: 1px solid #000; */
+  box-sizing: border-box;
+  font-size: 3vh;
+  font-weight: bold;
+  height: calc(2vh + 2px);
+  line-height: calc(2vh + 2px);
+  text-align: center;
+  width: 2vh;
 }
 
-@keyframes App-logo-spin {
+.logo {
+  animation: logo-spin infinite 20s linear;
+}
+
+@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
